App now has a "don't hide" option (it was getting unnerving) Slightly revamped (more Snow Leopardish) icon New credits

--- a/resources/Credits.html
+++ b/resources/Credits.html
@@ -2,11 +2,9 @@
 <center>
 <p>Shelf. It's insane.</p>
 
-<p><a href="http://jerakeen.org/code/shelf/">http://jerakeen.org/code/shelf/</a></p>
+<p>original code by <a href="http://jerakeen.org/">Tom Insam</a>, 2010 enhancements by <a href="http://the.taoofmac.com/">Rui Carmo</a>.</p>
 
-<p>by <a href="http://jerakeen.org/">Tom Insam</a></p>
-
-<p>Icon by <a href="http://the.taoofmac.com/space/">Rui Carmo</a></p>
+<p>Give <a href="https://github.com/rcarmo/shelf/issues">feedback</a>, <a href="https://github.com/rcarmo/shelf">fork it</a>.</p>
 
 </center>
 </html>
