--- a/resources/Credits.html
+++ b/resources/Credits.html
@@ -1,9 +1,9 @@
 <html>
 <center>
-<p>Shelf. It's insane.</p>
+<p>Shelf. It's still insane.</p>
 
 <p>original code by <a href="http://jerakeen.org/">Tom Insam</a>, 2010 enhancements by <a href="http://the.taoofmac.com/">Rui Carmo</a>.</p>
-
+<p>Uses <a href="http://fortawesome.github.com/Font-Awesome/">Font Awesome</a> glyphs</p>
 <p>Give <a href="https://github.com/rcarmo/shelf/issues">feedback</a>, <a href="https://github.com/rcarmo/shelf">fork it</a>.</p>
 
 </center>
